Fixed flickering for voyages at right click
Workitems:
#25334 Timeline view - Some elements are flickering when opening pending actions
git-tfs-id: [https://dev.azure.com/inatech]$/Shiptech10/Dev/Frontend;C27560

--- a/ShipTech10/app/css/timeline.css
+++ b/ShipTech10/app/css/timeline.css
@@ -451,3 +451,10 @@ span[timeline-order-column].desc:before {
 .vis-panel .vis-shadow {
 	display: none;
 }
+
+#timeline .vis-group, #timeline .vis-label{
+    height: 36px !important;
+}
+.contextmenu {
+    visibility: hidden;
+}
